@@ -286,7 +286,7 @@ public final class LocalConfiguration extends Configuration {
      *   defaults
      * @return A suitable XML parser
      */
-    public Parser getParser( String features )
+    public Parser getParser(final String features)
     {
         String prop;
         Parser parser;
@@ -345,7 +345,7 @@ public final class LocalConfiguration extends Configuration {
 
         if (parser instanceof XMLReader) {
             XMLReader xmlReader = (XMLReader) parser;
-            setFeaturesOnXmlReader(features, validation, namespaces, xmlReader);
+            setFeaturesOnXmlReader(getProperties(), features, validation, namespaces, xmlReader);
         }
         
         return parser;
@@ -438,7 +438,7 @@ public final class LocalConfiguration extends Configuration {
             }
         }
 
-        setFeaturesOnXmlReader(features, validation, namespaces, reader);
+        setFeaturesOnXmlReader(getProperties(), features, validation, namespaces, reader);
         
         return reader;
         
